chore(react-grid): fix filter selector cutting off by the virtual table (#1160)

--- a/packages/dx-styles/dx-grid-bs4.css
+++ b/packages/dx-styles/dx-grid-bs4.css
@@ -120,6 +120,9 @@ button.dx-g-bs4-table-edit-command-cell {
   z-index: 100;
   opacity: 0;
 }
+.dx-g-bs4-header-cell:nth-last-child(2) .dx-g-bs4-resizing-control-wrapper {
+  right: 0;
+}
 .dx-g-bs4-resizing-control-wrapper-active {
   opacity: 1;
 }
